# EmbarcaTech_comunicacaoSerial

./: CMakeLists.txt  README.md  comunicacaoserial.c  diagram.json  wokwi.toml
